# codeclub-markdown-criteria-filter

./: README.md  criteria-filter.cabal  deploy.sh  replace-inline.sh  run.sh
src/: Lib.hs
test/: filltext.hs  filltext.md  testfile.hs  testfile.json  testfile.md
